--- a/src/app/person/components/update/update.component.html
+++ b/src/app/person/components/update/update.component.html
@@ -5,10 +5,10 @@
     <mat-card-content>
       <div class="form-content" [formGroup]="formPerson">
         <div class="form-control-group">
-          <!--<mat-form-field appearance="outline">
+          <mat-form-field appearance="outline">
             <mat-label>Id</mat-label>
             <input matInput formControlName="id">
-          </mat-form-field>-->
+          </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Nombre</mat-label>
             <input matInput formControlName="name">
